fix: manually install terraform in docker image

--- a/agent/Dockerfile
+++ b/agent/Dockerfile
@@ -1,6 +1,10 @@
 FROM alpine:3.20 AS base
 
-RUN apk add --no-cache terraform nodejs npm
+RUN apk add --no-cache nodejs npm wget unzip && \
+    wget https://releases.hashicorp.com/terraform/1.9.0/terraform_1.9.0_linux_amd64.zip && \
+    unzip terraform_1.9.0_linux_amd64.zip && \
+    mv terraform /usr/local/bin/ && \
+    rm terraform_1.9.0_linux_amd64.zip
 
 FROM base AS builder
 WORKDIR /usr/src/app
@@ -14,10 +18,8 @@ WORKDIR /app
 
 COPY --from=builder /usr/src/app/dist ./dist
 COPY --from=builder /usr/src/app/node_modules ./node_modules
-
 COPY --from=builder /usr/src/app/package.json ./
 
-# This will be the directory where the victim repo is checked out
 VOLUME /app/infrastructure
 
 CMD ["node", "dist/main.js"]
