--- a/agent/package.json
+++ b/agent/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-ec2": "^3.863.0",
+    "@aws-sdk/client-s3": "^3.863.0",
     "@octokit/rest": "^22.0.0",
     "openai": "^5.12.0",
     "pino": "^9.7.0",
