--- a/.github/workflows/build-and-push.yml
+++ b/.github/workflows/build-and-push.yml
@@ -19,16 +19,17 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+          aws-region: eu-central-1
 
-      - name: Login to Amazon ECR Public
+      - name: Login to Amazon ECR
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
-        with:
-          registry-type: public
 
       - name: Build, tag, and push image to Amazon ECR
         env:
-          ECR_IMAGE_URI: public.ecr.aws/z3s6d3y0/terraguardian-agent:latest
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: terraguardian-agent
+          IMAGE_TAG: latest
         run: |
-          docker build -t $ECR_IMAGE_URI ./agent
-          docker push $ECR_IMAGE_URI
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./agent
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
