--- a/agent/package.json
+++ b/agent/package.json
@@ -18,6 +18,7 @@
     "openai": "^5.12.0",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
+    "prom-client": "^15.1.3",
     "typescript": "^5.9.2",
     "zod": "^3.25.76"
   },
