--- a/agent/package.json
+++ b/agent/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-ec2": "^3.863.0",
     "@aws-sdk/client-s3": "^3.863.0",
+    "@aws-sdk/client-secrets-manager": "^3.863.0",
     "@octokit/rest": "^22.0.0",
     "openai": "^5.12.0",
     "pino": "^9.7.0",
